--- a/client2/static/index.html
+++ b/client2/static/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>client</title>
-		<style>
-			html, body, canvas {
-				margin: 0px;
-				padding: 0px;
-				width: 100%;
-				height: 100%;
-				overflow: hidden;
-			}
-		</style>
-	</head>
-	<body>
-		<canvas id="canvas"></canvas>
-		<script src="canvas.js"></script>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>client</title>
+    <style>
+html, body, canvas {
+  margin: 0px;
+  padding: 0px;
+  width: 75%;
+  height: 75%;
+  overflow: hidden;
+}
+    </style>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script src="canvas.js"></script>
+  </body>
+  <div class="form">
+    <input type="text" name="input" id="input" placeholder="Type here">
+  </div>
 </html>
